syntax = "proto3";

package com.yangyang.demo_01.douyin.proto;

option java_multiple_files = true;
option java_package = "com.yangyang.demo_01.douyin.proto";
option java_outer_classname = "DouyinHackProto";

// Common Structure
message Common {
  string method = 1;
  int64 msg_id = 2;
  int64 room_id = 3;
  int64 create_time = 4;
}

// User Structure
message User {
  int64 id = 1; 
  int64 short_id = 2;
  string nick_name = 3;
  int32 gender = 4;
  string signature = 5;
  int32 level = 6;
  int64 birthday = 7;
  string telephone = 8;
  Image avatar_thumb = 9;
  Image avatar_medium = 10;
  Image avatar_large = 11;
}

message Image {
  repeated string url_list = 1;
  string uri = 2;
}

// 1. Chat Message
message WebcastChatMessage {
  Common common = 1;
  User user = 2;
  string content = 3;
  bool visible_to_sender = 4;
  Image background_image = 5;
  string full_screen_text_color = 6;
  Image background_image_v2 = 7;
}

// 2. Like Message
message WebcastLikeMessage {
  Common common = 1;
  int64 count = 2;
  int64 total = 3;
  int64 color = 4;
  User user = 5;
  string icon = 6;
}

// 3. Gift Message
message WebcastGiftMessage {
  Common common = 1;
  int64 gift_id = 2;
  int64 fan_ticket_count = 3;
  int64 group_count = 4;
  int64 repeat_count = 5;
  int64 combo_count = 6;
  User user = 7;
  User to_user = 8;
  int32 repeat_end = 9;
}

// 4. Member Message (Enter Room)
message WebcastMemberMessage {
  Common common = 1;
  User user = 2;
  int64 member_count = 3;
  User operator = 4;
  bool is_set_to_admin = 5;
  bool is_top_user = 6;
  int64 rank_score = 7;
  int64 top_user_no = 8;
  int64 enter_type = 9;
}

// 5. Room Stats
message WebcastRoomStatsMessage {
  Common common = 1;
  string display_short = 2;
  string display_middle = 3;
  string display_long = 4;
  int64 display_value = 5;
  int64 display_version = 6;
}

// 6. Ranklist Hour Entrance
message WebcastRanklistHourEntranceMessage {
  Common common = 1;
  int32 type = 2;
  string title = 3;
  string sub_title = 4;
  int64 expire_time = 5;
}
